# pima-embarque

./: AUTHORS  README.md
detection/: Face.hpp  Parameters.cpp  Parameters.hpp  Processing.cpp  Processing.hpp  README  main.cpp
detection/utilitaire/: Processing.cpp  main.cpp
face_detection/: CMakeLists.txt  README.md  camcv.c  facedetect.cpp  tracking.cpp
